# mindchat

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  cspell-words.txt  cspell.config.yaml  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: check.yml
.streamlit/: config-prod.toml  config.toml  secrets-EXAMPLE.toml
scripts/: deploy.sh  gen_requirements.py  pytest.sh  run.sh  update.sh
src/: config.py  helper.py  llm.py  llm_google.py  llm_mistral.py  llm_ollama.py  llm_openai.py  main.py  models.py  texts.py
src/prompts/: self-disclosure-feedback.md  self-disclosure-template.md
src/reports/: r00_disclaimer.py  r00_info.py  r01_self.py  r02_chat.py  r99_logout.py
tests/: test_run_all_pages.py
