[project]
name = "mindchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "google-genai>=1.63.0",
    "mistralai>=1.12.2",
    "numpy==2.2.3",
    "openai>=2.21.0",
    "pandas==2.2.3",
    "pyarrow==20.0.0",
    "pydantic>=2.12.5",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "ollama>=0.6.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
