[project]
name = "mindchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "google-genai>=2.2.0",
    "mistralai>=2.4.5",
    "numpy==2.2.3",
    "openai>=2.36.0",
    "pandas==2.2.3",
    "pyarrow==20.0.0",
    "pydantic>=2.13.4",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "ollama>=0.6.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
