[project]
name = "mindchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "google-genai>=2.8.0",
    "mistralai>=2.4.12",
    "numpy==2.2.3",
    "openai>=2.43.0",
    "pandas==2.2.3",
    "pyarrow==23.0.1",
    "pydantic>=2.13.4",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ollama>=0.6.2",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "tomli-w>=1.2.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
